Fixed winrar conversion accident. Removed hero image spacing. Div element were breaking.

--- a/Lab06/gpenton.lab06.css
+++ b/Lab06/gpenton.lab06.css
@@ -76,7 +76,8 @@ a:hover {
 }
 
 .aboutSpace {
-    margin-top: 170px !important;
+    margin-top: 100px !important;
+    /* controls space from main header to About Me section */
 }
 
 main {
@@ -105,10 +106,11 @@ p {
     justify-content: start;
     align-items: start;
 
+
 }
 
 .projects > div {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     border: 3px solid #ff2a6d;
     box-shadow: 5px 5px 3px #ff2a6d;
     border-radius: 25px;
